# HL2StyleEngine

./: .gitignore  LICENSE  PROJECT.md  PROJECT_GUIDELINES.md  README.md  WORKLOG.md  build-output.txt
.codex-build/GameObj/: Engine.Core.csproj.nuget.dgspec.json  project.assets.json  project.nuget.cache
.codex-build/GameOnly/: Game.deps.json
HL2StyleEngine/: Directory.Packages.props  HL2StyleEngine.sln  HS2Project.json  LaunchAssetImporter.bat  LaunchEditor.bat  LaunchGame.bat
HL2StyleEngine/Engine.AssetImporter/: AssetImporterForm.cs  FbxConversionResult.cs  FbxImportRequest.cs  FbxToGlbConverter.cs  Program.cs  README.md
HL2StyleEngine/Engine.Core/: Class1.cs  Engine.Core.csproj
HL2StyleEngine/Engine.Editor/: Class1.cs  Engine.Editor.csproj  README.md
HL2StyleEngine/Engine.Input/: Engine.Input.csproj  InputConfig.cs  InputSystem.cs
HL2StyleEngine/Engine.Platform/: Class1.cs  Engine.Platform.csproj
HL2StyleEngine/Engine.Render/: Class1.cs  Engine.Render.csproj  ImGuiLayer.cs
HL2StyleEngine/Engine.Runtime/: Engine.Runtime.csproj
HL2StyleEngine/Engine.UI/: Engine.UI.csproj  GameplayUiImGuiPreviewRenderer.cs  GameplayUiLayer.cs  GameplayUiState.cs  README.md  RmlUiBackend.cs  RmlUiFrameContext.cs
HL2StyleEngine/Game/: FpsCamera.cs  Game.csproj  GameApp.cs  HL2GameModule.CollisionMesh.cs  HL2GameModule.Fracture.cs  HL2GameModule.WeaponHost.cs  HL2GameModule.cs  ImGui3DGrid.cs  InputState.cs  LEVEL_DESIGN_GUIDE.md  Program.cs  README.md  (+3 more)
HL2StyleEngine/Native/HS2RmlUiBridge/: CMakeLists.txt  HS2RmlUiBridge.cpp  HS2RmlUiBridge.h  README.md
(+2465 files in other folders)
